tests-integration/tests/roundtrip/invalid/semantic/typecheck/record_var_in_list_combining_expr/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic/typecheck/record_var_in_list_combining_expr/input.essence:2:15:
  |
2 | such that sum(t) = 5
  |               ^
Type error: t
	Expected: set or matrix
	Got: record